--- a/settings.gradle
+++ b/settings.gradle
@@ -6,14 +6,11 @@ pluginManagement {
     }
 }
 dependencyResolutionManagement {
+    repositoriesMode.set(RepositoriesMode.FAIL_ON_PROJECT_REPOS)
     repositories {
         google()
         mavenCentral()
-        maven {
-            url 'https://naver.jfrog.io/artifactory/maven/'
-        }
     }
 }
-rootProject.name = "Start_Screen"
+rootProject.name = "map7"
 include ':app'
-
