--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -52,6 +52,17 @@
             android:name=".MainActivity"
             android:exported="false" />
 
+        <activity
+            android:name=".rvItem"
+            android:exported="false" />
+
+        <activity
+            android:name=".rvAdapter"
+            android:exported="false" />
+
+
+
+
         <meta-data
             android:name="com.google.android.geo.API_KEY"
             android:value="AIzaSyCcNQ_3oAwK5z-ooastxe-qEO_2o0vc_6I" />
@@ -61,4 +72,3 @@
     </application>
 
 </manifest>
-
